fix width of About at small screen sizes + larger sloping border to be visible on iphone

--- a/src/Sections/Experience/index.css
+++ b/src/Sections/Experience/index.css
@@ -27,7 +27,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    border-bottom: 75px solid white;
+    border-bottom: 125px solid white;
     border-left: 100vw solid transparent;
 }
 
